--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="myst.eriousobject">
-    <meta property="og:description" content="&ldquo;more morrissey, please&rdquo;">
+    <meta property="og:description" content="more morrissey, please">
     <meta property="og:image" content="moz.jpg">
     <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
     <title>myst.eriousobject</title>
